--- a/Client/Application/src/app/pages/guest/home/home.component.html
+++ b/Client/Application/src/app/pages/guest/home/home.component.html
@@ -1,9 +1,9 @@
 <ion-content>
-  <div class="header">
+  <!-- <div class="header">
     <ion-text class="title">
       This is it.
     </ion-text>
-  </div>
+  </div> -->
   
   <div>
     <ion-text class="body-title">
