Finalized Modal Design📱
1. Design, Implement and Link Services Page
2. 10
3. Fixed stuff regarding the book button, titles and picture.

--- a/Client/Application/src/app/components/activities/activities-modal/activities-modal.component.html
+++ b/Client/Application/src/app/components/activities/activities-modal/activities-modal.component.html
@@ -2,14 +2,13 @@
     <tr>
         <td style="padding: 16px; height:60vh;">
 
-            <img style="vertical-align: middle; object-fit: cover;" width="100%" height="100%"
-                src="../../../../assets/services-pics/movie-night.png">
+            <img style="object-fit: cover; height: 90%;" src="../../../../assets/services-pics/movie-night.png">
 
         </td>
-        <td style="padding: 16px; height: 60vh; width: 40%; ">
+        <td style="padding: 16px; height: 50vh; width: 40%; ">
             <div style="vertical-align: middle; margin: 0px;">
                 <p class="title-1">{{activity.title}}</p>
-              
+                <hr class="divider">
                 <br>
                 <br>
                 <p class="content-1">
@@ -45,5 +44,10 @@
             </div>
         </td>
     </tr>
+    <tr style="text-align: center;">
+        <br>
+        <td>
+            <button class="book-btn">Book</button>
+        </td>
+    </tr>
 </table>
-
