--- a/Client/Application/src/app/components/activities/activities-modal/activities-modal.component.scss
+++ b/Client/Application/src/app/components/activities/activities-modal/activities-modal.component.scss
@@ -4,7 +4,7 @@
     padding: 16px;
     width: 100%;
     margin: 16px;
-    background-color:white;
+    background-color: white;
 
 
 }
@@ -16,7 +16,6 @@
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
-    // line-height: 71px;
     padding-left: 16px;
     padding-top: 16px;
     color: #14274A;
@@ -33,17 +32,20 @@
 
 }
 
-.title-1 {
+.title-1 { //title
 
     @extend .title;
     font-weight: 400;
+    font-size: 30px;
 
 }
 
-.title-2 {
+.title-2 { //price
 
     @extend .title;
     font-weight: 700;
+    font-size: 20px;
+    margin-right: 5px;
 
 }
 
@@ -72,13 +74,6 @@
 
 }
 
-.content-3 {
-
-    @extend .content;
-    font-weight: 400;
-    font-size: 24px;
-
-}
 
 .cancel-btn {
 
@@ -96,4 +91,18 @@
 
     background: #FFFFFF;
     border: 1px solid #14274A;
+}
+
+.book-btn{
+    @extend .cancel-btn;
+    left: 45%;
+    width: 150px;
+    position: absolute;
+    right: 50%;
+    transform: translateX(-40%);
+}
+
+.divider{
+    border: solid rgba(0, 0, 0, 0.578) 0.02em;
+    height: 0.01em;
 }
