--- a/Client/Application/src/app/components/facilities/facilities-modal/facilities-modal.component.scss
+++ b/Client/Application/src/app/components/facilities/facilities-modal/facilities-modal.component.scss
@@ -102,6 +102,15 @@
     transform: translateX(-40%);
 }
 
+.back-btn{
+    @extend .cancel-btn;
+    bottom: 0%;
+    left:0%;
+    width: 20%;
+    margin: 20px;
+}
+
+
 .divider{
     border: solid rgba(0, 0, 0, 0.578) 0.02em;
     height: 0.01em;
