Implemented the Registration Logic📱
1. Design, Implement and Link Services Page
2. 8
3. Added registration button along with its logic.

--- a/Client/Application/src/app/components/activities/activities-modal/activities-modal.component.scss
+++ b/Client/Application/src/app/components/activities/activities-modal/activities-modal.component.scss
@@ -110,6 +110,11 @@
     margin: 20px;
 }
 
+.disabled-btn{
+    @extend .cancel-btn;
+    background-color: grey;
+}
+
 .divider{
     border: solid rgba(0, 0, 0, 0.578) 0.02em;
     height: 0.01em;
