--- a/Client/Application/src/app/components/activities/activities-modal/activities-modal.component.html
+++ b/Client/Application/src/app/components/activities/activities-modal/activities-modal.component.html
@@ -7,7 +7,7 @@
         </td>
         <td style="padding: 16px; height: 50vh; width: 40%; ">
             <div style="vertical-align: middle; margin: 0px;">
-                <p class="title-1">{{activity.title}}</p>
+                <p class="title-1">{{activity?.value?.title}}</p>
                 <hr class="divider">
                 <br>
                 <br>
@@ -15,7 +15,7 @@
                     Description:
                 </p>
                 <p class="content-2">
-                    {{activity.description}}
+                    {{activity?.value?.description}}
                 </p><br>
                 <p class="content-1">
                     Date:
@@ -47,7 +47,10 @@
     <tr style="text-align: center;">
         <br>
         <td>
-            <button class="book-btn">Book</button>
+            <button class="book-btn" [disabled]="seats == 0 || free < 0" class="disabled-btn"
+            (click)="register()">
+            Register
+            </button>
         </td>
     </tr>
 </table>
