--- a/Client/Application/src/app/components/news/news-list-item/news-list-item.component.html
+++ b/Client/Application/src/app/components/news/news-list-item/news-list-item.component.html
@@ -1,4 +1,3 @@
-<!-- This is the feed post -->
 <div>
   <ion-text class="header">
     {{news.value.title}}
@@ -14,38 +13,7 @@
 </div>
 
 <div>
-  <!-- <ion-button (click)="news_dialog.openDialog()" class="button" fill="outline" color="#14274A">
-    Explore
-  </ion-button> -->
-  <ion-button id="open-custom-dialog" expand="block" fill="outline" color="#14274A">Explore</ion-button>
+  <ion-button (click)="openPopup()" expand="block" fill="outline" color="#14274A">Explore</ion-button>
 </div>
 
-
-
-<!-- This it the pop up -->
-<ion-modal id="example-modal" #modal trigger="open-custom-dialog">
-  <ng-template>
-    <div class="wrapper">
-      <h1 class="title">{{news.value.title}}</h1>
-      <ion-list lines="none">
-
-        <img src="../../../../assets/news-pics/news-sample-pic.png">
-
-        <div class="date">
-          published at {{news.value.date}}
-        </div>
-
-        <hr>
-        
-        <div class="description">
-          {{news.value.body}}
-        </div>
-
-        <div class="likes">
-          {{news.value.likes}} likes
-        </div>
-
-      </ion-list>
-    </div>
-  </ng-template>
-</ion-modal>
+<hr>
