--- a/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.scss
+++ b/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.scss
@@ -24,3 +24,11 @@
     top: 45%;
     transform: translateX(-50%) translateY(-50%);
 }
+
+.rooms-header{
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'Roboto';
+    font-weight: 500;
+    color: black;
+}
