Designed the Rooms Page📱
1. Design, Implement Rooms Page
2. 10
3. Designed rooms page.

--- a/Client/Application/src/app/components/room/room-item/room-item.component.html
+++ b/Client/Application/src/app/components/room/room-item/room-item.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<!-- <div class="main">
     <div style="background: #14274A;">
         <img [src]="room?.value?.image_path || '../../../assets/room-1.png'" height="400vh"
             width="100%" style="object-fit: cover;">
@@ -31,4 +31,52 @@
     </table>
 
 
-</div>
+</div> -->
+
+<!-- <div>
+    <ion-text class="header">
+      {{news.value.title}}
+    </ion-text>
+  </div>
+  
+  <div class="image-bg">
+    <img src="../../../../assets/rooms-pics/room-sample-pic.png">
+  </div>
+  
+  <div class="body">
+    {{news.value.body}}
+  </div> -->
+
+  <ion-content style="height: 66vh;">
+
+    <div>
+  
+  
+      <table>
+  
+        <tr>
+          <td colspan="2">
+            <h2 class="img-title">{{room?.value?.label}}</h2>
+            <img class="main-img" src="../../../assets/rooms/room-sample.jpg">
+          </td>
+  
+        </tr>
+  
+        <!-- <tr>
+          <td>
+            <img class="sub-imgs" src="../../../assets/services-pics/movie-night.png">
+          </td>
+  
+          <td>
+            <img class="sub-imgs" src="../../../assets/services-pics/movie-night.png">
+          </td>
+        </tr> -->
+  
+  
+      </table>
+      <!-- <div class="button-container">
+  
+        <button class="learn-more-button" (click)="openModal()">Learn More</button>
+      </div> -->
+    </div>
+  </ion-content>
