--- a/Client/Website/src/app/components/database/blocks/table/table.component.html
+++ b/Client/Website/src/app/components/database/blocks/table/table.component.html
@@ -70,7 +70,7 @@
     <tr *matNoDataRow>
         <td *ngIf="!loading" style="padding: 32px;" class="mat-cell"
             [attr.colspan]="data_injection.displayed_columns.length + (data_injection.buttons ? 1 : 0)">
-            Access Denied... <div (click)="download.emit()" class="retry">Try again?</div>
+            {{ error ? 'denied...' : 'empty_table' }}  <div (click)="download.emit()" class="retry" *ngIf="error">{{'retry_question' | translate }}?</div>
         </td>
     </tr>
 </table>
