--- a/Client/Website/src/app/components/room/room-item/room-item.component.html
+++ b/Client/Website/src/app/components/room/room-item/room-item.component.html
@@ -19,7 +19,7 @@
             </td>
             <td>
                 <button class="check-btn" (click)="route()">
-                    View Details
+                    {{ 'view_details' | translate }}
                 </button>
             </td>
             <td>
