--- a/Client/Website/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
@@ -2,8 +2,8 @@
     <app-nav-bar [transparent]="true"></app-nav-bar>
     <div class="title-container">
         <p class="title-1">{{"welcome_to" | translate}}</p>
-        <p class="title-2">{{"purple" | translate}}</p>
-        <p class="title-3">{{"motel" | translate}}</p>
+        <p class="title-2">{{"name1" | translate}}</p>
+        <p class="title-3">{{"name2" | translate}}</p>
         <p class="title-4">{{"hotel_introduction" | translate}}</p>
     </div>
 </div>
