--- a/Client/Website/src/app/pages/guest/rooms/overview/room-overview.component.html
+++ b/Client/Website/src/app/pages/guest/rooms/overview/room-overview.component.html
@@ -9,7 +9,7 @@
 
     <div style="background-color: #14274A;">
 
-        <p class="testimonial-title">Testimonials</p>
+        <p class="testimonial-title">{{ 'testimonials' | translate }}</p>
         <mat-divider
             style="margin-left: 30%; margin-right: 30%; background-color: #14274A; border-color: lightgray;"></mat-divider>
 
