--- a/Client/Website/src/app/services/dialogs/authentication/register/register.component.html
+++ b/Client/Website/src/app/services/dialogs/authentication/register/register.component.html
@@ -37,7 +37,7 @@
             <td>
                 <!-- Date of Birth -->
                 <mat-form-field class="full-width input" appearance="fill">
-                    <mat-label class="label">Choose a date</mat-label>
+                    <mat-label class="label">{{ 'choose_date' | translate }}</mat-label>
                     <input [(ngModel)]="date_of_birth" matInput [matDatepicker]="picker" readonly>
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
