--- a/Client/Website/src/app/services/dialogs/chef-list/chef-list.component.html
+++ b/Client/Website/src/app/services/dialogs/chef-list/chef-list.component.html
@@ -1,6 +1,6 @@
 <div mat-dialog-title class="title padded">
 
-  The Chefs
+  {{'chefs' | translate}}
   <hr style="border-color: #14274A;">
 
 </div>
