--- a/Client/Website/src/app/services/dialogs/promo/promo.component.html
+++ b/Client/Website/src/app/services/dialogs/promo/promo.component.html
@@ -1,13 +1,13 @@
-<div class="title" mat-dialog-title>Apply Promo</div>
+<div class="title" mat-dialog-title>{{ 'apply_promo' | translate }}</div>
 <div mat-dialog-content>
   <p class="text">
-    Ente a promo code
+    {{ 'enter_code' | translate }}
   </p>
   <input class="input" matInput [(ngModel)]="promo">
   <p class="error text">{{message}}</p>
 
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="false">Cancel</button>
-  <button mat-button (click)="apply()" cdkFocusInitial>Apply</button>
+  <button mat-button [mat-dialog-close]="false">{{ 'cancel' | translate }}</button>
+  <button mat-button (click)="apply()" cdkFocusInitial>{{ 'apply' | translate }}</button>
 </div>
