--- a/Client/Website/src/app/components/activities/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activities/activity-list-item/activity-list-item.component.html
@@ -18,38 +18,34 @@
 
     <div class="activity-info">
 
-        <p class="title-1">Description</p>
+        <p class="title-1">{{ 'description' | translate }}</p>
         <mat-divider style="border-top-color: #14274A"></mat-divider>
         <br>
-        <br>
-        <p class="content-1">
-            Description:
-        </p>
         <p class="content-2">
             {{activity?.value?.description}}
         </p>
         <br>
         <p class="content-1">
-            Price:
+            {{ 'price' | translate }}:
         </p>
         <p class="content-2">
             {{formatPrice}}
         </p><br>
         <p class="content-1">
-            Start Date:
+            {{ 'start_date' | translate }}:
         </p>
         <p class="content-2">
             {{activity?.value?.start_date}}
         </p><br>
         <p class="content-1">
-            End Date:
+            {{ 'end_date' | translate }}:
         </p>
         <p class="content-2">
             {{activity?.value?.end_date}}
         </p>
         <br>
         <p class="content-1">
-            Seats:
+            {{ 'seats' | translate }}:
         </p>
         <button (click)="changeQuantity(-1)" class="quantity_btn">-</button>
         <p style="display: inline;" class="content-2">
@@ -58,7 +54,7 @@
         <button (click)="changeQuantity(1)" class="quantity_btn">+</button>
         <br>
         <p [style.visibility]="seats!=0 ? 'visible' : 'hidden'" class="content-1">
-            Total:
+            {{ 'total' | translate }}:
         </p>
         <!-- <p class="content-2">
                     {{formatTotalPrice}}
@@ -73,7 +69,7 @@
                 <td>
                     <button [disabled]="seats == 0 || free < 0" class="cancel-btn"
                         (click)="register()">
-                        Register
+                        {{ 'register' | translate }}
                     </button>
                 </td>
             </tr>
