--- a/Client/Website/src/app/components/activities/activity-overview/activity-overview.component.html
+++ b/Client/Website/src/app/components/activities/activity-overview/activity-overview.component.html
@@ -13,20 +13,20 @@
                 <br>
                 <br>
                 <p class="content-1">
-                    Description:
+                    {{ 'description' | translate }}:
                 </p>
                 <p class="content-2">
                     {{description}}
                 </p><br>
                 <p class="content-1">
-                    Date:
+                    {{ 'date' | translate }}:
                 </p>
                 <p class="content-2">
                     <!-- {{formatRange}} -->
                 </p>
                 <br><br>
                 <p class="content-1">
-                    Total:
+                    {{ 'total' | translate }}:
                 </p>
                 <table style="padding: 0px; width: 100%;">
                     <tr>
@@ -37,7 +37,7 @@
                         </td>
                         <td>
                             <p class="cancel-btn">
-                                Cancel
+                                {{ 'cancel' | translate }}
                             </p>
                         </td>
                     </tr>
