--- a/Client/Website/src/app/components/facility/facility.component.html
+++ b/Client/Website/src/app/components/facility/facility.component.html
@@ -18,13 +18,9 @@
 
     <div class="facility-info">
 
-        <p class="title-1">Description</p>
+        <p class="title-1">{{ 'description' | translate }}</p>
         <mat-divider style="border-top-color: #14274A"></mat-divider>
         <br>
-        <br>
-        <p class="content-1">
-            Description:
-        </p>
         <p class="content-2">
             {{facility?.value?.description}}
         </p>
