--- a/Client/Website/src/app/components/facility/facility.component.scss
+++ b/Client/Website/src/app/components/facility/facility.component.scss
@@ -121,7 +121,7 @@
 }
 
 .details-title {
-    color: white;
+    color: #14274A;
     font-weight: 600;
     font-family: 'Robotto';
     font-size: 30px;
