--- a/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.html
+++ b/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.html
@@ -21,13 +21,13 @@
                     </p><br>
                     <br>
                     <p class="content-1">
-                        Price:
+                        {{ 'price' | translate }}:
                     </p>
                     <p class="content-2">
                         USD {{formatPrice}}
                     </p><br>
                     <p class="content-1">
-                        Quantity:
+                        {{ 'quantity' | translate }}:
                     </p>
                     <button (click)="changeQuantity(-1)" class="quantity_btn">-</button>
                     <p style="display: inline;" class="content-2">
@@ -36,7 +36,7 @@
                     <button (click)="changeQuantity(1)" class="quantity_btn">+</button>
                     <br><br>
                     <p class="content-1">
-                        Total:
+                        {{ 'total' | translate }}:
                     </p>
                     <table style="padding: 0px; width: 100%;">
                         <tr>
@@ -47,7 +47,7 @@
                             </td>
                             <td style="width: 50%;">
                                 <button [disabled]="!quantity" (click)="addToCart()" class="add-btn">
-                                    Add to Cart
+                                    {{ 'add_cart' | translate }}
                                 </button>
                             </td>
                         </tr>
