--- a/Client/Website/src/app/components/news/news-list-popup/news-list-popup.component.html
+++ b/Client/Website/src/app/components/news/news-list-popup/news-list-popup.component.html
@@ -38,7 +38,7 @@
         </td>
         <td style="padding: 16px; height: 80vh;  width: 40%; resize: none;">
             <div style="vertical-align: middle;  margin: 0px;">
-                <p class="title-1">Article</p>
+                <p class="title-1">{{'article' | translate }}</p>
                 <mat-divider style="border-top-color: #14274A"></mat-divider>
                 <br>
                 <br>
@@ -46,13 +46,13 @@
                     {{body}}
                 </p><br>
                 <p class="content-1">
-                    Published:
+                    {{'published' | translate}}:
                 </p>
                 <p class="content-2">
                     {{date}}
                 </p><br>
                 <p class="title-2">
-                    {{likes}} Likes
+                    {{likes}} {{ 'likes' | translate }}
                 </p><br>
             </div>
         </td>
