--- a/Client/Website/src/app/pages/guest/profile/edit-profile/edit-profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/edit-profile/edit-profile.component.html
@@ -37,7 +37,7 @@
             <td>
                 <!-- Date of Birth -->
                 <mat-form-field class="full-width input" appearance="fill">
-                    <mat-label class="label">Choose a date</mat-label>
+                    <mat-label class="label">{{ 'choose_date' | translate }}</mat-label>
                     <input (ngModelChange)="user.date_of_birth = parseDate($event)"
                         [ngModel]="user.date_of_birth" matInput [matDatepicker]="picker" readonly>
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
