--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -3,8 +3,8 @@
     <app-nav-bar></app-nav-bar>
     <div>
 
-        <button (click)="invokeCart()" class="cart-btn">View Cart</button>
-        <p class="title">Menu</p>
+        <button (click)="invokeCart()" class="cart-btn">{{ 'view_cart' | translate }}</button>
+        <p class="title">{{ 'menu' | translate }}</p>
         <hr style="margin-left: 10%; margin-right: 10%; border-color: white;">
     </div>
 
@@ -14,28 +14,28 @@
         <div class="wrap">
             <img width="100%" src="../../../../../assets/starters-main.png" />
             <div class="content">
-                Starters
+                {{ 'starters' | translate }}
             </div>
         </div>
 
         <div class="wrap">
             <img width="100%" src="../../../../../assets/platters-main.png" />
             <div class="content">
-                Platters
+                {{ 'platters' | translate }}
             </div>
         </div>
 
         <div class="wrap">
             <img width="100%" src="../../../../../assets/salads-main.png" />
             <div class="content">
-                Salads
+                {{ 'salads' | translate }}
             </div>
         </div>
 
         <div class="wrap">
             <img width="100%" src="../../../../../assets/desserts-main.png" />
             <div class="content">
-                Desserts
+{{ 'desserts' | translate }}
             </div>
         </div>
     </div>
