--- a/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.html
+++ b/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.html
@@ -1,11 +1,10 @@
 <div class="nav">
     <app-nav-bar [transparent]="true"></app-nav-bar>
     <div class="title-container">
-        <p class="title-1">Welcome to</p>
-        <p class="title-2">Purple</p>
-        <p class="title-3">Motel</p>
-        <p class="title-4">Book your stay and enjoy Luxury<br>redefined at the most affordable
-            rates.</p>
+        <p class="title-1">{{ 'welcome' | translate }}</p>
+        <p class="title-2">{{ 'name1' | translate }}</p>
+        <p class="title-3">{{ 'name2' | translate }}</p>
+        <p class="title-4">{{'hotel_introduction' | translate }}</p>
     </div>
     <app-quick-availability (result)="filterRooms($event)"
         class="quick-container"></app-quick-availability>
@@ -14,21 +13,15 @@
 <div style="width: 100%;">
     <ng-container *ngIf="!filtered">
 
-        <p class="header">Rooms and Rates</p>
+        <p class="header">{{ 'rooms_rates' | translate}}</p>
         <mat-divider
             style="margin-right: 64px;margin-left: 64px;margin-bottom: 16px; border-top-color: #14274A"></mat-divider>
-        <p class="sub-header">Each of our bright, light-flooded rooms come with everything you could
-            possibly need for a comfortable stay. And yes,
-            comfort isn't our only objective, we also value good design, sleek contemporary
-            furnishing
-            complemented
-            by the rich tones of nature's palette as visible from our rooms' sea-view windows and
-            terraces. </p>
+        <p class="sub-header">{{ 'rooms_introduction' | translate }} </p>
     </ng-container>
 
     <ng-container *ngIf="filtered">
 
-        <p class="header">{{filtered_rooms.length}} Found</p>
+        <p class="header">{{filtered_rooms.length}} {{ 'found' | translate }}</p>
         <mat-divider
             style="margin-right: 64px;margin-left: 64px;margin-bottom: 16px; border-top-color: #14274A"></mat-divider>
     </ng-container>
@@ -44,20 +37,22 @@
     <!-- <mat-paginator [length]="filtered_rooms.size" [pageSize]="5"
         [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator> -->
 
-        <div #scroll style="overflow-y: auto; height: 100%; display: flex; flex-wrap: wrap;"
-            infinite-scroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="1000"
-            [scrollWindow]="true" (scrolled)="ngOnInit()">
+    <div #scroll style="overflow-y: auto; height: 100%; display: flex; flex-wrap: wrap;"
+        infinite-scroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="1000"
+        [scrollWindow]="true" (scrolled)="ngOnInit()">
 
-            <div *ngFor="let room of filtered_rooms" style="width: 50%;">
-                <app-room-item [change]="getEffect(room[0], room[1].type)" class="item"
-                    [room]="{key: room[0], value: room[1]}"
-                    [room_type]="room_types.getPair(room[1].type)"></app-room-item>
-                <mat-divider
-                    style="margin-right: 64px; margin-left: 64px; margin: 16px; border-top-color: #14274a40"></mat-divider>
-            </div>
+        <div *ngFor="let room of filtered_rooms" style="width: 50%;">
+            <app-room-item [change]="getEffect(room[0], room[1].type)" class="item"
+                [room]="{key: room[0], value: room[1]}"
+                [room_type]="room_types.getPair(room[1].type)"></app-room-item>
+            <mat-divider
+                style="margin-right: 64px; margin-left: 64px; margin: 16px; border-top-color: #14274a40"></mat-divider>
         </div>
+    </div>
 
     <!-- <app-paginator #pagination [pageSize]="10" [collectionSize]="1000" [firstLastButtons]="true" [maxSize]="2" [nextPreviousButtons]="true"></app-paginator> -->
 
 
 </div>
+
+<app-footer main_color="#14274A" [alt_color]="'white'" [font_color]="'white'"></app-footer>
