--- a/Client/Application/src/app/components/news/news-list-popup/news-list-popup.component.html
+++ b/Client/Application/src/app/components/news/news-list-popup/news-list-popup.component.html
@@ -1,26 +1,26 @@
 <!-- <ion-modal id="example-modal" #modal trigger="open-custom-dialog">
   <ng-template> -->
-    <div class="wrapper">
-      <h1 class="title">{{title}}</h1>
-      <ion-list lines="none">
+<div class="wrapper">
+  <h1 class="title">{{title}}</h1>
+  <ion-list lines="none">
 
-        <img src="../../../../assets/news-pics/news-sample-pic.png">
+    <img src="../../../../assets/news-pics/news-sample-pic.png">
 
-        <div class="date">
-          published at {{date}}
-        </div>
-
-        <hr>
-        
-        <div class="description">
-          {{body}}
-        </div>
-
-        <div class="likes">
-          {{likes}} likes
-        </div>
-
-      </ion-list>
+    <div class="date">
+      published at {{date}}
     </div>
-  <!-- </ng-template>
+
+    <hr>
+
+    <div class="description">
+      {{body}}
+    </div>
+
+    <div class="likes-number">
+      {{likes}} likes
+    </div>
+
+  </ion-list>
+</div>
+<!-- </ng-template>
 </ion-modal> -->
