--- a/Client/Application/src/app/components/news/news-list-popup/news-list-popup.component.scss
+++ b/Client/Application/src/app/components/news/news-list-popup/news-list-popup.component.scss
@@ -30,7 +30,7 @@ $primary-color: #14274A;
     text-align: center;
 }
 
-.likes {
+.likes-number {
     @extend .parent;
     font-size: 16px;
     text-align: right;
