--- a/Client/Application/src/app/components/news/news-list-item/news-list-item.component.scss
+++ b/Client/Application/src/app/components/news/news-list-item/news-list-item.component.scss
@@ -55,3 +55,15 @@ hr {
     width: 50%;
     margin-bottom: 4%;
 }
+
+.likes-icon {
+    background-color: #14274A;
+    color: white;
+    display: inline;
+}
+
+.likes-number {
+    //@extend .parent;
+    color: $primary-color;
+    display: inline;
+}
