--- a/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.html
+++ b/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.html
@@ -44,9 +44,13 @@
     <!-- <mat-paginator [length]="filtered_rooms.size" [pageSize]="5"
         [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator> -->
 
+        <!-- -----------------------------------------------------------------------------------------------------------------
         <div #scroll style="overflow-y: auto; height: 100%; display: flex; flex-wrap: wrap;"
-            infinite-scroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="1000"
-            [scrollWindow]="true" (scrolled)="ngOnInit()">
+        infinite-scroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="1000"
+        [scrollWindow]="true" (scrolled)="ngOnInit()">
+        ----------------------------------------------------------------------------------------------------------------- -->
+        <div #scroll style="overflow-y: auto; height: 100%; display: flex; flex-wrap: wrap;"
+            infinite-scroll (scrolled)="ngOnInit()">
 
             <div *ngFor="let room of filtered_rooms" style="width: 50%;">
                 <app-room-item [change]="getEffect(room[0], room[1].type)" class="item"
