--- a/Client/Application/src/app/components/news/news-list-item/news-list-item.component.scss
+++ b/Client/Application/src/app/components/news/news-list-item/news-list-item.component.scss
@@ -31,7 +31,7 @@ $primary-color: #14274A;
     margin-top: 2%;
     text-transform: uppercase;
     width: fit-content;
-    padding-bottom: 2%;
+    padding-bottom: 6%;
 }
 
 img {
@@ -56,14 +56,6 @@ hr {
     margin-bottom: 4%;
 }
 
-.likes-icon {
-    background-color: #14274A;
-    color: white;
-    display: inline;
-}
-
-.likes-number {
-    //@extend .parent;
-    color: $primary-color;
-    display: inline;
+.likes {
+    text-align: left;
 }
