--- a/Client/Application/src/app/components/news/news-list-popup/news-list-popup.component.html
+++ b/Client/Application/src/app/components/news/news-list-popup/news-list-popup.component.html
@@ -4,7 +4,7 @@
   <h1 class="title">{{title}}</h1>
   <ion-list lines="none">
 
-    <img src="../../../../assets/news-pics/news-sample-pic.png">
+    <img src="../../../../assets/news-pics/news-sample-pic.png" class="image">
 
     <div class="date">
       published at {{date}}
@@ -19,7 +19,7 @@
     <div class="likes-number">
       {{likes}} likes
     </div>
-
+    
   </ion-list>
 </div>
 <!-- </ng-template>
