--- a/Client/Application/src/app/pages/guest/home/home.component.html
+++ b/Client/Application/src/app/pages/guest/home/home.component.html
@@ -1,13 +1,13 @@
 <ion-content>
-  <!-- <div class="header">
+  <div class="header">
     <ion-text class="title">
-      This is it.
+      {{'This is it.' | translate}}
     </ion-text>
-  </div> -->
+  </div>
   
   <div>
     <ion-text class="body-title">
-      News Feed
+      {{'News Feed' | translate}}
     </ion-text>
   </div>
   
