--- a/Client/Application/src/app/components/news/news-list-item/news-list-item.component.html
+++ b/Client/Application/src/app/components/news/news-list-item/news-list-item.component.html
@@ -12,27 +12,31 @@
   {{news.value.body}}
 </div>
 
-
-<table align="right">
+<table align="center" style="padding-top: 5%;">
   <tr>
     <td>
+      <div class="button">
+        <ion-button (click)="openPopup()" expand="block" fill="outline" color="#14274A">{{"Explore" | translate}}</ion-button>
+      </div>
     </td>
-    <td>
-      <div (click)="like()" fill="clear" class="likes">
-        <ion-icon [name]="news.value.is_liked ? 'heart-outline' : 'heart-dislike-outline'" [style.color]="news.value.is_liked ? '#A4274A' : '#14274A'"></ion-icon>
+
+    <td class="likes-btn">
+      <div (click)="like()" fill="clear">
+        <ion-icon [name]="news.value.is_liked ? 'heart-outline' : 'heart-dislike-outline'"
+          [style.color]="news.value.is_liked ? '#A4274A' : '#14274A'"></ion-icon>
       </div>
     </td>
     
     <td>
-      <div class="likes">
-        {{news.value.likes_number}} Likes
+      <div class="likes-nbr">
+        {{news.value.likes_number}} {{"Likes" | translate}}
       </div>
     </td>
   </tr>
+  <tr>
+  </tr>
 </table>
 
-<div>
-  <ion-button (click)="openPopup()" expand="block" fill="outline" color="#14274A">Explore</ion-button>
-</div>
 
 <hr>
+
