--- a/Client/Application/src/app/components/news/news-list-popup/news-list-popup.component.html
+++ b/Client/Application/src/app/components/news/news-list-popup/news-list-popup.component.html
@@ -7,7 +7,7 @@
     <img src="../../../../assets/news-pics/news-sample-pic.png" class="image">
 
     <div class="date">
-      published at {{date}}
+      {{'published on' | translate}} {{date}}
     </div>
 
     <hr>
@@ -16,10 +16,15 @@
       {{body}}
     </div>
 
+    <!-- <div (click)="like()" fill="clear" class="likes">
+      <ion-icon [name]="is_liked ? 'heart-outline' : 'heart-dislike-outline'"
+        [style.color]="is_liked ? '#A4274A' : '#14274A'"></ion-icon>
+    </div> -->
+
     <div class="likes-number">
-      {{likes}} likes
+      {{likes}} {{'likes' | translate}}
     </div>
-    
+
   </ion-list>
 </div>
 <!-- </ng-template>
